force-app/main/default/objects/Contact/fields/emailId__c.field-meta.xml
<CustomField>
    <fullName>emailId__c</fullName>
    <label>emailId</label>
    <type>Email</type>
</CustomField>