force-app/main/default/objects/Contact/fields/phoneVal__c.field-meta.xml
<CustomField>
    <fullName>phoneVal__c</fullName>
    <label>phoneVal</label>
    <length>13</length>
    <type>Text</type>
</CustomField>