force-app/main/default/objects/Contact/fields/Property_Tour__c.field-meta.xml
<CustomField>
    <fullName>Property_Tour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rental property the contact wants to tour!</description>
    <inlineHelpText>Choose a property to tour!</inlineHelpText>
    <label>Property Tour</label>
    <referenceTo>Rental_Property__c</referenceTo>
    <relationshipLabel>Contacts (Property Tour)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>