force-app/main/default/objects/Contact/fields/Rental_Property__c.field-meta.xml
<CustomField>
    <fullName>Rental_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Property</label>
    <referenceTo>Rental_Property__c</referenceTo>
    <relationshipLabel>Tenant</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>